examples/test/testpolicy17584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17584
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key44: value39
      key13: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value41
          key42: value47
      podSelector:
        matchLabels:
          key22: value38
          key17: value24
          key40: value16
